# level_basestation

./: CMakeLists.txt  README.md  how to prep base station.txt
RF Studio settings/: cc430.c  cc430.xml  working_rx_from_usrp.c  working_rx_from_usrp.prs  working_rx_from_usrp.xml
cmake/Toolchains/: raspberry_pi_cross.cmake
cran/: client.grc  client.py  client_rx.grc  client_tx.grc  host.grc  host.py
dev_board_comm/: README  convert.m  test.grc  top_block.py
doc/: README.level
examples/: CMakeLists.txt  fsk_demod_dev.py  simple_fsk_demod.py  test_rx.py
gr-digital/examples/demod/: mpsk_demod.grc  mpsk_demod.py
gr-qtgui/lib/: ConstellationDisplayPlot.cc  DisplayPlot.cc  FrequencyDisplayPlot.cc  TimeDomainDisplayPlot.cc
gr-uhd/lib/: gr_uhd_usrp_sink.cc
grextras/: CMakeLists.txt  SubProj.cmake
grextras/examples/: cran_test.grc  dual_mac_loop_back.grc  dual_mac_loop_back.py  heartbeat_521mhz.grc  tdma_hier.grc  tdma_radio_tuntap.grc  test_mac.grc  test_mac.py
grextras/python/: packet_framer.py
include/: CMakeLists.txt  level_packet_sink.h
level/examples/: CMakeLists.txt  const_tx.py  demo.py  fsk_demod_dev.py  hn_demo.py  msk_demod_dev.py  ping_demo.py  test_receive.py  test_rx.py  test_transmit.py
level/include/: level_packet_sink.h
level/lib/: .level_packet_sink.cc.swp  CMakeLists.txt  level_packet_sink.cc
level/python/: CMakeLists.txt  __init__.py  cc1k_level_pkt.py  crc16.py  fsk.py  msk.py  zmq_fft_sink.py
lib/: CMakeLists.txt  Makefile.am  level.i  level_packet_sink.cc  ti_packet_sink.cc  ti_packet_sink.h
python/: CMakeLists.txt  __init__.py  cc1100.py  cc1101.py  cc1101_level_pkt.py  cc1k.py  cc1k_level_pkt.py  fsk_demod.py  receive_path.py  ti_pkt_sink.py
setup/: setup.sh
spectrum_sense/: .assign_channels.py.swp  .get.py.swp  .get_channels.py.swp  .usrp_spectrum_sense.py.swp  README  add_client.py  assign_channels.py  config.py  get.py  get_channels.py  usrp_spectrum_sense.py
swig/: CMakeLists.txt  level.i  level_packet_sink.i
wardrive/: cw.grc  gmsk_521mhz.grc  heartbeat_521mhz.grc  status_panel.grc  top_block.py  uhd_snr_receiver.grc  uhd_snr_receiver.py
wardrive/full_test/: cheetara_rx.grc  cheetara_rx.py  cheetara_tx.grc  cheetara_tx.py  panthro_rx.grc  panthro_rx.py  panthro_tx.grc  panthro_tx.py  top_block.py
